syntax = "proto3";

option csharp_namespace = "Tony.FileTransfer.Server";

import "Protos/common.proto";

package fileupload;



service IFileUpload{
	
	rpc CheckFileExist (CheckFileExistRequest) returns (common.CommonResponse);

	rpc UploadWithStream (stream UploadWithStreamRequest) returns (stream common.CommonResponse);

	rpc FinishUpload(FinishUploadRequest) returns (common.CommonResponse);
}

message CheckFileExistRequest{
	string Md5=1;
}

message UploadWithStreamRequest{
	bytes Data=2;
}
message FinishUploadRequest{
	string Md5=1;
	bool IsFastUpload=2;
	string ClientFileName=3;
	int32 RecognizeId=4;
	string UserName=5;
	 
}



